[package]
name = "train_head_engine"
version = "0.1.0"
authors = ["CayzerOK <cayzerok@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
winit = "0.22.1"
winapi = { version = "0.3.8", features = ["windef", "winuser"] }

bincode = "1.2.1"
json = "*"